--- a/app/src/main/res/layout/fragment_reminders.xml
+++ b/app/src/main/res/layout/fragment_reminders.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="20dp"
         android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +44,7 @@
         app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.871" />
+        app:layout_constraintVertical_bias="0.955"
+        app:tint="@color/floatBtn"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
