--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -59,4 +59,5 @@
     <color name="scrollContainerBg">#2C3A2D</color>
     <color name="shopCardBg">#3A3A3A</color>
     <color name="shopCardBtn">#FFFFFF</color>
+    <color name="floatBtn">#000000</color>
 </resources>
