--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
     <color name="scrollContainerBg">#DC000000</color>
     <color name="shopCardBg">#FFFFFF</color>
     <color name="shopCardBtn">#000000</color>
+    <color name="floatBtn">#FFFFFF</color>
 
 </resources>
 
