--- a/app/src/main/res/layout/category_progress.xml
+++ b/app/src/main/res/layout/category_progress.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Color.Dashboard.Progress.view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
+    android:background="@drawable/progress_bar_bg_gradient"
     >
 
     <TextView
@@ -20,6 +20,7 @@
         android:text="@string/category_name"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/textPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,10 +30,11 @@
         android:id="@+id/categoryProgress"
         style="@style/Color.Dashboard.Progress.bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_margin="10dp"
         android:max="100"
         android:progress="50"
+        android:progressDrawable="@drawable/progress_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
