--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -29,20 +29,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:selectionRequired="true"
+        app:singleSelection="true"
+        app:checkedButton="@id/scan_mode"
         >
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/scan_mode"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            style="@style/ToggleButtonStyle"
+            android:checkable="true"
             android:text="@string/scan_bill" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/manual_mode"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            style="@style/ToggleButtonStyle"
+            android:checkable="true"
             android:text="@string/add_manually" />
 
 
@@ -66,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/save"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
