--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -7,96 +7,125 @@
     tools:context=".DashBoard">
 
     <TextView
+        android:id="@+id/textView9"
         style="@style/App.design.MainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dashboard"
-        app:layout_constraintBottom_toTopOf="@+id/materialButtonToggleGroup2"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.0"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/materialButtonToggleGroup2"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:singleSelection="true">
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:singleSelection="true"
+        app:checkedButton="@id/btn_day"
+        app:selectionRequired="true"
+        android:elevation="2dp"
+        >
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_year"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="@string/year" />
+            android:text="@string/year"
+            android:checkable="true"
+            style="@style/ToggleButtonStyle"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_month"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
             android:text="@string/month"
-            tools:layout_editor_absoluteX="36dp"
-            tools:layout_editor_absoluteY="86dp" />
+            android:checkable="true"
+            style="@style/ToggleButtonStyle"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_day"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
             android:text="@string/day"
-            tools:layout_editor_absoluteX="36dp"
-            tools:layout_editor_absoluteY="86dp" />
+            android:checkable="true"
+            style="@style/ToggleButtonStyle"
+            />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
-    <TextView
-        style="@style/Color.Dashboard.Total.view"
-        android:id="@+id/totalViewMain"
-        android:layout_width="360dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-        android:text="@string/total_monthly_spendings"
-        android:textSize="8pt"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup2"
-        />
-
-    <TextView
-        android:id="@+id/totalAmount"
-        android:layout_width="166dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardTotalSpendings"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="7pt"
-        android:text="@string/amount"
-        android:gravity="center"
-        android:paddingTop="30dp"
-        app:layout_constraintBottom_toBottomOf="@id/totalViewMain"
-        app:layout_constraintTop_toTopOf="@id/totalViewMain"
-        app:layout_constraintStart_toStartOf="@id/totalViewMain"
-        app:layout_constraintEnd_toEndOf="@id/totalViewMain"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="211dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        app:cardBackgroundColor="@color/dashboardHighlight"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/materialButtonToggleGroup2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="2dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:gravity="center_vertical"
+            >
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:tint="@color/cashGreenLight"
+                android:background="@drawable/icon_fill"
+                android:src="@drawable/money_bag_svgrepo_com"
+                android:layout_marginEnd="12dp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/totalViewMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Daily Spendings"
+                    android:textColor="@color/textTitle"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/totalAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rs. 0.00"
+                    android:textColor="@color/cashGreen"
+                    android:textSize="24sp"
+                    android:layout_marginTop="5dp"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <ScrollView
-        style="@style/Color.Dashboard.Scroll.view"
         android:id="@+id/scrollView2"
-        android:layout_width="360dp"
+        style="@style/Color.Dashboard.Scroll.view"
+        android:backgroundTint="@color/dashboardHighlight"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingBottom="5dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/totalViewMain"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/cardTotalSpendings">
 
         <LinearLayout
             android:id="@+id/progress_container"
