--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,7 +9,8 @@
     <item
         android:id="@+id/nav_add"
         android:icon="@drawable/menu_add_expense_icon"
-        android:title="@string/add" />
+        android:title="@string/add"
+        />
     <item
         android:id="@+id/nav_shops"
         android:icon="@drawable/menu_add_shop_icon"
