--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,23 +23,41 @@
     <style name="App.design.MainText" parent="">
         <item name="android:layout_marginStart">30dp</item>
         <item name="android:layout_marginTop">30dp</item>
+        <item name="android:textColor">@color/textTitle</item>
         <item name="android:textSize">12pt</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <!-- Nav bar -->
+    <style name="Widget.BottomNav.ActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/menu_active_indicator</item>
+    </style>
+
 
     <!-- Dashboard items -->
+    <!-- Toggle button group -->
+    <style name="ToggleButtonStyle" parent="">
+        <item name="shapeAppearance">@style/ShapeAppearance.FullyRounded</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="backgroundTint">@color/selector_toggle_button</item>
+        <item name="android:textColor">@color/selector_toggle_text</item>
+    </style>
+
+    <style name="ShapeAppearance.FullyRounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="Color.Dashboard.Total.view" parent="">
         <item name="android:background">@drawable/rounded_corners_background</item>
-        <item name="android:backgroundTint">@color/dashboardHighlight</item>
     </style>
     <style name="Color.Dashboard.Scroll.view" parent="">
         <item name="android:background">@drawable/rounded_corners_background</item>
-        <item name="android:backgroundTint">@color/scrollContainerBg</item>
     </style>
-    <style name="Color.Dashboard.Progress.view" parent="">
-        <item name="android:background">@drawable/rounded_corners_background</item>
-        <item name="android:backgroundTint">@color/white</item>
-    </style>
+
     <style name="Color.Dashboard.Progress.bar" parent="Widget.AppCompat.ProgressBar.Horizontal">
         <item name="android:progressTint">@color/progressBar</item>
     </style>
@@ -48,9 +66,42 @@
 
     <!-- scan mode style -->
     <style name="AddExpense.background" parent="">
-        <item name="android:background">@drawable/image_preview_day</item>
+        <item name="android:background">@drawable/image_preview</item>
+    </style>
+    <style name="ScanMode.Button.styles" parent="">
+        <item name="backgroundTint">@color/scan_mode_btn_color</item>
+        <item name="android:textColor">@color/textTitle</item>
+        <item name="iconTint">@color/textTitle</item>
+        <item name="strokeColor">@color/textTitle</item>
+        <item name="strokeWidth">1dp</item>
     </style>
 
+    <!-- manual mode styles -->
+    <style name="AddManual.Form.row.Style" parent="">
+        <item name="android:layout_marginHorizontal">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+    <style name="AddManual.Form.row.Style.TextView" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+    <style name="AddManual.Form.row.Style.EditText" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1.5</item>
+    </style>
+    <style name="AddManual.Form.row.Style.Icon" parent="">
+        <item name="android:layout_width">24dp</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginHorizontal">16dp</item>
+        <item name="tint">@color/cashGreen</item>
+    </style>
 
     <!-- Add Shops Fragment Style -->
     <style name="Color.AddShops.CardView.Background" parent="">
