New UI changes & added Search bar for shops

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:background="@color/menu_bg"
         app:itemActiveIndicatorStyle="@style/Widget.BottomNav.ActiveIndicator"
         app:itemIconTint="@color/nav_item_selector"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 
 
