--- a/app/src/main/res/layout/fragment_reminders.xml
+++ b/app/src/main/res/layout/fragment_reminders.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        style="@style/App.design.MainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Reminders"
