--- a/app/src/main/res/layout/manual_add.xml
+++ b/app/src/main/res/layout/manual_add.xml
@@ -131,6 +131,7 @@
         android:layout_marginBottom="40dp"
         android:layout_marginEnd="60dp"
         android:text="ADD"
+        android:textColor="@color/textDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
