--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -61,27 +61,21 @@
     <color name="deepOrange">#FF8A65</color>
 
     <!-- shop card background colors -->
-    <color name="shopColor1">#BC304F</color>   <!-- Dark Mauve -->
-    <color name="shopColor2">#DC5E15</color>   <!-- Deep Teal -->
-    <color name="shopColor3">#377492</color>   <!-- Dark Blue-Gray -->
-    <color name="shopColor4">#11998E</color>   <!-- Charcoal Blue -->
-    <color name="shopColor5">#1B262C</color>   <!-- Very Dark Navy -->
-    <color name="shopColor6">#4A4E69</color>   <!-- Dusty Purple -->
-    <color name="shopColor7">#22223B</color>   <!-- Midnight Blue -->
-    <color name="shopColor8">#283149</color>   <!-- Dark Indigo -->
-    <color name="shopColor9">#403F4C</color>   <!-- Dark Slate -->
-    <color name="shopColor10">#3F72AF</color>  <!-- Steel Blue -->
-    <color name="shopColor11">#364F6B</color>  <!-- Deep Ocean -->
-    <color name="shopColor12">#1F2041</color>  <!-- Dark Violet -->
-    <color name="shopColor13">#5C5470</color>  <!-- Smokey Purple -->
-    <color name="shopColor14">#222831</color>  <!-- Charcoal -->
-    <color name="shopColor15">#30475E</color>  <!-- Gunmetal -->
+    <color name="shopColor1">#C2185B</color>
+    <color name="shopColor1end">#E91E63</color>
+    <color name="shopColor2">#EF6C00</color>
+    <color name="shopColor2end">#FF9800</color>
+    <color name="shopColor3">#0288D1</color>
+    <color name="shopColor3end">#03A9F4</color>
+    <color name="shopColor4">#00796B</color>
+    <color name="shopColor4end">#009688</color>
 
     <!-- Custom extras -->
     <color name="dashboardHighlight">#1D2426</color>
     <color name="scrollContainerBg">#2C3A2D</color>
     <color name="shopCardBg">#3A3A3A</color>
-    <color name="shopCardBtn">#FFFFFF</color>
+    <color name="shopCardBtn">#000000</color>
+    <color name="shopCardText">#FFFFFF</color>
     <color name="floatBtn">#000000</color>
     <color name="editText">#000000</color>
 </resources>
