--- a/app/src/main/res/layout/add_shop_dialog.xml
+++ b/app/src/main/res/layout/add_shop_dialog.xml
@@ -8,10 +8,10 @@
 
     <EditText
         android:id="@+id/editShopName"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintHorizontal_bias="0.0"
         android:ems="10"
         android:inputType="text"
@@ -34,10 +34,10 @@
 
     <EditText
         android:id="@+id/search_box_places"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="20dp"
         android:hint="Search for a location"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
